fix: add to cart button alignment & cartegory portillons metabox file

--- a/assets/public/css/public-style.css
+++ b/assets/public/css/public-style.css
@@ -61,7 +61,7 @@
 }
 
 #custom-add-to-cart {
-  margin-top: 15px;
+  margin-top: 5px;
   width: 100%;
   text-transform: uppercase;
   height: 50px;
